--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,13 @@
 		    <groupId>org.springframework.security.oauth</groupId>
 		    <artifactId>spring-security-oauth2</artifactId>
 		    <version>2.5.2.RELEASE</version>
-		</dependency>
+		</dependency><!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.10.1</version>
+</dependency>
+
 
 	</dependencies>
 
