--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,6 @@ spring.security.oauth2.client.registration.google.client-id=944743088444-53ik461
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile, email
 
-
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
