--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@wearth_high?TNS_ADMIN=./src/main/resources/Wallet_wearth
+spring.datasource.url=jdbc:oracle:thin:@wearth_high?TNS_ADMIN=/Users/mirac/Downloads/Wallet_wearth
 spring.datasource.username=admin
 spring.datasource.password=Wearth123456
 
