select기능 구현 완료[08/02 박지영]

--- a/src/main/java/com/example/demo/db/db.properties
+++ b/src/main/java/com/example/demo/db/db.properties
@@ -1,4 +1,5 @@
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@wearth_high?TNS_ADMIN=/Users/mirac/Downloads/Wallet_wearth
+#url=jdbc:oracle:thin:@wearth_high?TNS_ADMIN=/Users/mirac/Downloads/Wallet_wearth
+url=jdbc:oracle:thin:@wearth_high?TNS_ADMIN=./src/main/resources/Wallet_wearth
 username=admin
 password=Wearth123456
